--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,13 @@ pnpm-debug.log*
 .idea/
 
 astro.confi.mjs
+
+*.tsbuildinfo
+
+.cache/
+
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
